--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -193,7 +193,7 @@ b, i, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a 
     }
     
     img:hover {
-        opacity: 0.8;
+        // opacity: 0.8;
     }
 }
 
