--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,12 +7,12 @@
 <head>
     {% include head.html %}
 
-    <!-- HEADER IMAGE >
+    <!-- HEADER IMAGE -->
     <center>
         <span class="main-header-image">
-            <a href="/"><img src="/images/header/clean-and-simple-header.jpg"></a>
+            <a href="/"><img src="/images/header/header.png"></a>
         </span>
-    </center-->
+    </center>
 
     <!-- NAVIGATION -->
     <br><br>
