--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -9,7 +9,7 @@ a {
 	}
 
 	&:hover { 
-		color: lighten($link-color, 20); 
+		color: $highlight-color; 
 	}
 
 	&:focus { 
@@ -143,7 +143,7 @@ svg:not(:root) {
     }
     
     a:hover {
-        color: lighten($base-color,30);
+        color: $highlight-color;
     }
     
     word-spacing: 20px;
@@ -155,11 +155,11 @@ svg:not(:root) {
     font-size: 14px;
 
     a {
-        color: #F2992E;
+        color: $highlight-color;
     }
     
     &:hover {
-        color: lighten(#F2992E,20);
+        color: lighten($highlight-color,20);
     }
 }
 
