--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -22,6 +22,7 @@ $body-color                      : #e8e8e8;
 $text-color                      : #808080;
 $border-color                    : lighten($base-color,60);
 $link-color                      : #202020;
+$highlight-color				 : #f99d53;
 
 /*--- SCREEN SIZES ----------------------------------------------------------*/
 
