--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -22,7 +22,7 @@
             <a href="/archives/">ARCHIVE</a>
             <a href="/tags/">TAGS</a>
             <a href="/about/">ABOUT</a>
-            <a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a>
+            <a href="/papers/">PAPERS</a>
         </span>
     </center> 
 </head>
