--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -159,7 +159,7 @@ svg:not(:root) {
     }
     
     &:hover {
-        color: lighten($highlight-color,20);
+        color: $base-color;
     }
 }
 
@@ -172,7 +172,7 @@ b, i, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a 
 /*--- MAIN CONTENT ----------------------------------------------------------*/
 
 .entry-content {
-    font-size: 16px;
+    font-size: 18px;
     line-height: 26px;
 }
 
@@ -276,7 +276,7 @@ header .entry-meta {
     }
     
 	a:hover {
-		color: darken($text-color,40);
+		color: $highlight-color;
 	}
 }
 
