--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -12,13 +12,13 @@ $caption-font                    : $base-font;
 $code-font                       : monospace;
 $alt-font                        : serif;
 
-$doc-font-size                   : 16;
+$doc-font-size                   : 18;
 $doc-line-height                 : 26;
 
 /*--- COLORS ----------------------------------------------------------------*/
 
 $base-color                      : rgba(#222,0.8);
-$body-color                      : #e8e8e8;
+$body-color                      : #f3f3f3;
 $text-color                      : #808080;
 $border-color                    : lighten($base-color,60);
 $link-color                      : #202020;
