--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,8 @@
     {% include head.html %}
 
     <!-- HEADER IMAGE -->
-    <div style='width=100% !important; height=360px !important;' id='particles-js'></div>
+    <div id='particles-js'></div>
+
     <!-- NAVIGATION -->
     <br><br>
     <center>
@@ -19,6 +20,8 @@
             <a href="/about/">ABOUT</a>
             <a href="/papers/">PAPERS</a>
         </span>
+        <br><br>
+        <span>by Daniele Grattarola</span>
     </center> 
 </head>
 
@@ -69,6 +72,8 @@
         </footer>
     </div>   
 </footer>
+
+<!-- PARTICLE JS -->
 <script src="/assets/js/particles.min.js"></script>
 <script>
 /* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
@@ -76,4 +81,5 @@ particlesJS.load('particles-js', '/assets/js/particles.json', function() {
   console.log('callback - particles.js config loaded');
 });
 </script>  
+
 </html>
