--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@
     {% include head.html %}
 
     <!-- HEADER IMAGE -->
-    <div id='particles-js'></div>
+    <center id='particles-js'></center>
 
     <!-- NAVIGATION -->
     <br><br>
@@ -16,7 +16,6 @@
         <span class="navigation-bar">
             <a href="/">HOME</a>
             <a href="/archives/">ARCHIVE</a>
-            <a href="/tags/">TAGS</a>
             <a href="/about/">ABOUT</a>
             <a href="/papers/">PAPERS</a>
         </span>
