minor fix in particles canvas

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -318,7 +318,7 @@ h1 {
 	
 	@media #{$small} {
 		width: 100% !important;
-		height: 100% !important;
+		height: 180px !important;
 	}
 
 	@media #{$medium} {
