--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -355,12 +355,18 @@ h1 {
 /*--- HEADER ----------------------------------------------------------------*/
 
 #header-caption-container {
-	margin-right: 20px; 
-	margin-left: 20px;
+		@media #{$medium} {
+
+	}
 }
 
 #header-caption {
+	font-size: 14px;
 	font-weight: 100; 
-	letter-spacing: 10px;
+	letter-spacing: 5px;
 	margin-right: -10px;
+	@media #{$medium} {
+		font-size: 0px + $doc-font-size;
+		letter-spacing: 10px;
+	}
 }
