--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -15,8 +15,8 @@
             <a href="/"><img src="/images/header/header.jpg"></a>
         </span>
     </center>
-    <center id='header-caption-container'>
-        <span id='header-caption'><br>by DANIELE GRATTAROLA</span>
+    <center>
+        <span id='header-caption'>by DANIELE GRATTAROLA</span>
     </center>
 
     <!-- NAVIGATION -->
