--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@
         </span>
     </center>
     <center id='header-caption-container'>
-        <span id='header-caption'><br>by DANIELE GRATTAROLA</span>
+        <span id='header-caption'>by DANIELE GRATTAROLA</span>
     </center>
 
     <!-- NAVIGATION -->
