--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,4 +59,6 @@
 
 
 <style type="text/css">body {background-image:url({{ background }});}</style>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
 {% endif %}
