--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -350,6 +350,7 @@ h1 {
 /*--- HEADER ----------------------------------------------------------------*/
 
 #header-caption {
+	width: 90% !important;
 	font-size: 14px;
 	font-weight: 100; 
 	letter-spacing: 5px;
