--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,7 +39,7 @@
 <!-- http://t.co/dKP3o1e -->
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
-<meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0;">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
