--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -6,10 +6,33 @@
 
 <head>
     {% include head.html %}
-
+    
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="_/js/libs/jquery-1.9.1.min.js"><\/script>')</script>
+    <link rel="stylesheet" id="pagestyle" type="text/css" href="{{ site.url }}/assets/css/slicknav.min.css">
+    <script src="{{ site.url }}/assets/js/jquery.slicknav.min.js"></script>
+    
+    <div class="navbar">
+		<a class="brand" href="/">DANIELEGRATTAROLA°</a>
+		<div id='menu'>
+			<a href="/">Home</a>
+            <a href="/archives/" >Archive</a>
+			<a href="/papers/" >Papers</a>
+			<a href="/about/" class="current">About</a>
+		</div>
+	</div>
+    
+    <script>
+		$(function(){
+			$('#menu').slicknav({
+				label: '',
+				brand: '<a class="brand" href="/">DANIELEGRATTAROLA</a>'
+			});
+		});
+	</script>
+    
+    <!-- center id='particles-js'></center-->
     <!-- HEADER IMAGE >
-    <center id='particles-js'></center-->
-    <!-- HEADER IMAGE -->
     <center>
         <span class="main-header-image">
             <a href="/"><img src="/images/header/header.jpg"></a>
@@ -17,9 +40,9 @@
     </center>
     <center>
         <span id='header-caption'>by DANIELE GRATTAROLA</span>
-    </center>
+    </center-->
 
-    <!-- NAVIGATION -->
+    <!-- NAVIGATION>
     <br><br>
     <center>
         <span class="navigation-bar">
@@ -28,7 +51,7 @@
             <a href="/papers/">PAPERS</a>
             <a href="/about/">ABOUT</a>
         </span>
-    </center> 
+    </center--> 
 </head>
  
 <!-- BODY -->
