--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -11,18 +11,21 @@ $heading-font                    : $base-font;
 $caption-font                    : $base-font;
 $code-font                       : monospace;
 $alt-font                        : serif;
-
 $doc-font-size                   : 18;
 $doc-line-height                 : 26;
 
 /*--- COLORS ----------------------------------------------------------------*/
 
 $base-color                      : rgba(#222,0.8);
-$highlight-color				 : #f99d53;
-$body-color                      : lighten($highlight-color, 32); // #f3f3f3;
 $text-color                      : #808080;
-$border-color                    : lighten($base-color,60);
 $link-color                      : #202020;
+$highlight-color				 : #f99d53;
+
+$body-color      				 : #f3f3f3;
+$border-color                    : lighten($base-color,60);
+
+$navbar-dark					 : rgba(0, 0, 0, 0.8);
+$navbar-light                    : #ffffff;
 
 /*--- SCREEN SIZES ----------------------------------------------------------*/
 
