--- a/_includes/head.html
+++ b/_includes/head.html
@@ -46,9 +46,11 @@
 
 <meta http-equiv="cleartype" content="on">
 
-<!-- Load Modernizr -->
-<script src="{{ site.url }}/assets/js/vendor/modernizr-2.6.2.custom.min.js"></script>
-
+<!--JQuery and Slicknav-->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="_/js/libs/jquery-1.9.1.min.js"><\/script>')</script>
+<link rel="stylesheet" id="pagestyle" type="text/css" href="{{ site.url }}/assets/css/slicknav.min.css">
+<script src="{{ site.url }}/assets/js/jquery.slicknav.min.js"></script>
 
 {% if page.image.background or site.background %}
 
