--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -17,7 +17,7 @@
 		<div id='menu'>
 			<a href="/">Home</a>
             <a href="/archives/" >Archive</a>
-			<a href="/papers/" >Papers</a>
+			<a href="/projects/" >Projects</a>
 			<a href="/about/" class="current">About</a>
 		</div>
 	</div>
@@ -26,7 +26,7 @@
 		$(function(){
 			$('#menu').slicknav({
 				label: '',
-				brand: '<a class="brand" href="/">DANIELEGRATTAROLA</a>'
+				brand: '<a class="brand" href="/">DANIELEGRATTAROLA°</a>'
 			});
 		});
 	</script> 
