--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@
 		<div id='menu'>
 			<a href="/">Home</a>
             <a href="/archives/" >Archive</a>
-			<a href="/papers/" >Papers</a>
+			<a href="/projects/" >Projects</a>
 			<a href="/about/" class="current">About</a>
 		</div>
 	</div>
@@ -21,7 +21,7 @@
 		$(function(){
 			$('#menu').slicknav({
 				label: '',
-				brand: '<a class="brand" href="/">DANIELEGRATTAROLA</a>'
+				brand: '<a class="brand" href="/">DANIELEGRATTAROLA°</a>'
 			});
 		});
 	</script>
