--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -10,6 +10,10 @@ body {
     font-size: 0px + $doc-font-size;
 }
 
+img {
+    width: 100%
+}
+
 /*--- GLOBAL TRANSITION -----------------------------------------------------*/
 
 b, i, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a, path {
