--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <span>
-    &copy; {{ site.time | date: '%Y' }} Daniele Grattarola | <a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS feed</a><br>Like this blog and want to see more? Donate Bitcoins at 1KLyYmceVcs1kXWkUcwrQBGrZymc85scXa<br>Powered by <a target="_blank" href="http://jekyllrb.com" rel="nofollow">Jekyll</a> using the <a target="_blank" href="https://github.com/nathanrooy/Clean-and-Simple-Jekyll-Theme">Clean+Simple</a> theme.
+    &copy; {{ site.time | date: '%Y' }} Daniele Grattarola | <a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS feed</a><br>Like this blog and want to see more? Donate Bitcoins at <a href="bitcoin:1KLyYmceVcs1kXWkUcwrQBGrZymc85scXa">1KLyYmceVcs1kXWkUcwrQBGrZymc85scXa</a><br>Powered by <a target="_blank" href="http://jekyllrb.com" rel="nofollow">Jekyll</a> using the <a target="_blank" href="https://github.com/nathanrooy/Clean-and-Simple-Jekyll-Theme">Clean+Simple</a> theme.
 </span>
