--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,7 @@
    
 <head>
     {% include head.html %}
+    {% seo %}
     
     <div class="navbar">
 		<a class="brand" href="/">DANIELEGRATTAROLA°</a>
