--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -19,6 +19,7 @@
 			<a href="/">Home</a>
             <a href="/archives/" >Archive</a>
 			<a href="/projects/" >Projects</a>
+      <a href="/metaverse/" >Metaverse</a>
 			<a href="/about/" class="current">About</a>
 		</div>
 	</div>
