--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -182,6 +182,7 @@ pre {
 
 .personal-social-media {
     a {
+    	text-decoration: none !important;
     	padding-right: 5px;
     	padding-left: 5px;
     }
