Remove Archive section Change Projects to Publications Add new posts to Metaverse

--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -16,9 +16,8 @@
     <div class="navbar">
 		<a class="brand" href="/">DANIELEGRATTAROLA°</a>
 		<div id='menu'>
-			<a href="/">Home</a>
-            <a href="/archives/" >Archive</a>
-			<a href="/projects/" >Projects</a>
+			<a href="/">Blog</a>
+			<a href="/publications/" >Publications</a>
       <a href="/metaverse/" >Metaverse</a>
 			<a href="/about/" class="current">About</a>
 		</div>
