Implementing a network-based model of epilepsy with Numpy and Numba

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -265,6 +265,12 @@ svg:not(:root) {
   overflow: hidden; 
 }
 
+.centered {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .full-width {
     width: 100%
 }
