Make display equations scrollable

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -453,3 +453,9 @@ h1 {
 	}
 }
 
+/*--- MATHJAX ----------------------------------------------------------------*/
+
+.MathJax_Display {
+    overflow-x: scroll;
+}
+
