--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -7,30 +7,7 @@
 <head>
     {% include head.html %}
     {% seo %}
-    
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="_/js/libs/jquery-1.9.1.min.js"><\/script>')</script>
-    <link rel="stylesheet" id="pagestyle" type="text/css" href="{{ site.url }}/assets/css/slicknav.min.css">
-    <script src="{{ site.url }}/assets/js/jquery.slicknav.min.js"></script>
-    
-    <div class="navbar">
-		<a class="brand" href="/">DANIELEGRATTAROLA°</a>
-		<div id='menu'>
-			<a href="/">Blog</a>
-			<a href="/publications/" >Publications</a>
-      <a href="/metaverse/" >Metaverse</a>
-			<a href="/about/" class="current">About</a>
-		</div>
-	</div>
-    
-    <script>
-		$(function(){
-			$('#menu').slicknav({
-				label: '',
-				brand: '<a class="brand" href="/">DANIELEGRATTAROLA°</a>'
-			});
-		});
-	</script> 
+    {% include navbar.html %} 
 </head>
  
 <!-- BODY -->
