--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,25 +7,7 @@
 <head>
     {% include head.html %}
     {% seo %}
-    
-    <div class="navbar">
-		<a class="brand" href="/">DANIELEGRATTAROLA°</a>
-		<div id='menu'>
-			<a href="/">Blog</a>
-			<a href="/publications/" >Publications</a>
-            <a href="/metaverse/" >Metaverse</a>
-			<a href="/about/" class="current">About</a>
-		</div>
-	</div>
-    
-    <script>
-		$(function(){
-			$('#menu').slicknav({
-				label: '',
-				brand: '<a class="brand" href="/">DANIELEGRATTAROLA°</a>'
-			});
-		});
-	</script>
+    {% include navbar.html %} 
 </head>
 
 <!-- BODY -->
