--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -228,6 +228,7 @@ pre {
 .personal-social-media {
     a {
     	text-decoration: none !important;
+        border-bottom: none !important;
     	padding-right: 5px;
     	padding-left: 5px;
     }
